--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/platform-browser": "18.1.3",
     "@angular/platform-browser-dynamic": "18.1.3",
     "@angular/router": "18.1.3",
-    "@porsche-design-system/components-angular": "3.17.0-rc.1",
+    "@porsche-design-system/components-angular": "3.17.0",
     "@porsche-design-system/utilities": "5.4.1",
     "@porschehn/navigation": "3.5.0",
     "rxjs": "^7.8.1",
