--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/platform-browser": "19.0.5",
     "@angular/platform-browser-dynamic": "19.0.5",
     "@angular/router": "19.0.5",
-    "@porsche-design-system/components-angular": "3.24.0-rc.0",
+    "@porsche-design-system/components-angular": "3.24.0",
     "@porsche-design-system/utilities": "5.4.1",
     "@vanilla-extract/css": "^1.17.0",
     "rxjs": "^7.8.1",
