--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/platform-browser": "19.0.5",
     "@angular/platform-browser-dynamic": "19.0.5",
     "@angular/router": "19.0.5",
-    "@porsche-design-system/components-angular": "3.26.0-rc.0",
+    "@porsche-design-system/components-angular": "3.27.0-rc.4",
     "@vanilla-extract/css": "^1.17.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.8.1",
@@ -40,6 +40,8 @@
     "@types/jasmine": "~5.1.5",
     "@types/jasminewd2": "~2.0.13",
     "@types/node": "^22.10.5",
+    "ag-grid-community": "33.0.4",
+    "ag-grid-angular": "33.0.4",
     "codelyzer": "^6.0.2",
     "glob": "^11.0.0",
     "jasmine-core": "~5.5.0",
